--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
       - SPRING_PROFILES_ACTIVE=default
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/identity-service:idt-release-1.0-6
+    image: lpgregistry.azurecr.io/identity-service:idt-release-3.0-1-20210217-165501
     ports:
       - 8080:8080
       - 8081:8081
@@ -85,7 +85,7 @@ services:
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/lpg-learner-record:master-19
+    image: lpgregistry.azurecr.io/lpg-learner-record:idt-release-3.0-1-20210217-165723
     depends_on:
       - civil-servant-registry
       - identity
@@ -113,7 +113,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:master-16
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:idt-release-2.0-1
     depends_on:
       - identity
     ports:
@@ -126,7 +126,7 @@ services:
       - OAUTH_SERVICE_URL=http://identity:8080
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:master-23
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:idt-release-3.0-2-20210219-125511
     depends_on:
       - identity
     ports:
@@ -154,7 +154,7 @@ services:
       - OAUTH_SERVICE_URL=http://identity:8080
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/notification-service:master-5
+    image: lpgregistry.azurecr.io/notification-service:master-7
     depends_on:
       - identity
     ports:
