--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
 		"@types/connect-redis": "0.0.11",
 		"@types/redis": "2.8.14",
 		"app-root-path": "^2.1.0",
-		"applicationinsights": "2.1.2",
+		"applicationinsights": "2.1.3",
 		"axios": "0.18.1",
 		"azure-storage": "2.8.1",
 		"class-validator": "0.9.1",
@@ -121,7 +121,6 @@
 		"traverson": "6.0.3",
 		"traverson-hal": "6.0.0",
 		"unzip": "0.1.11",
-		"winston": "3.3.3",
-		"winston-azure-application-insights": "3.0.0"
+		"winston": "3.3.3"
 	}
 }
