--- a/package.json
+++ b/package.json
@@ -2,23 +2,21 @@
 	"name": "lib",
 	"version": "0.0.1",
 	"scripts": {
-		"build": "npm run sass:all && npm run compile",
-		"clean": "./bin/setup-dist",
-		"compile": "./bin/tsc",
-		"dev:ui": "npm run watch & npm run watch-sass:ui & npm run start:ui & wait",
+		"build": "gulp compile",
+		"clean": "gulp setupDist",
+		"compile": "gulp typescript",
+		"dev:ui": "npm run watch & npm run start:ui",
 		"lint": "tslint --project tsconfig.json",
 		"lint:headless": "tslint --project test/headless/tsconfig.json",
 		"lint:webdriver": "tslint --project test/webdriver/tsconfig.json",
 		"nuke": "rm -rf dist node_modules",
-		"postinstall": "./bin/setup-dist",
-		"sass:all": "npm run sass:ui",
-		"sass:ui": "node-sass src/ui/assets/styles/main.scss dist/ui/assets/styles/main.css --output-style compressed",
+		"postinstall": "gulp setupDist",
+		"sass": "gulp sass",
 		"start:all": "npm run start:ui",
 		"start:build": "npm run build && npm run start:ui",
 		"start:ui": "cd dist/ui && node --icu-data-dir=../../node_modules/full-icu ../node_modules/ui/server.js",
 		"test": "find dist -name '*.spec.js' | NODE_ICU_DATA=node_modules/full-icu xargs node_modules/mocha/bin/mocha --timeout 10000 --exit",
-		"watch": "./bin/tsc -w",
-		"watch-sass:ui": "node-sass -w -r src/ui/assets/styles -o dist/ui/assets/styles --output-style compressed"
+		"watch": "./bin/tsc -w"
 	},
 	"devDependencies": {
 		"@types/app-root-path": "^1.2.4",
@@ -57,6 +55,10 @@
 		"chai-as-promised": "7.1.1",
 		"cheerio": "^1.0.0-rc.2",
 		"csv": "2.0.0",
+		"dart-sass": "^1.25.0",
+		"gulp": "^4.0.2",
+		"gulp-sass": "^5.0.0",
+		"gulp-typescript": "^6.0.0-alpha.1",
 		"make-runnable": "1.3.6",
 		"mocha": "^5.2.0",
 		"nodemon": "1.14.12",
@@ -68,7 +70,7 @@
 		"supertest": "^3.1.0",
 		"ts-node-register": "^1.0.0",
 		"tslint": "5.9.1",
-		"typescript": "2.9.2"
+		"typescript": "4.3.5"
 	},
 	"dependencies": {
 		"@types/connect-redis": "0.0.11",
@@ -92,8 +94,8 @@
 		"express-validator": "4.3.0",
 		"full-icu": "1.3.4",
 		"glob": "^7.1.2",
-		"govuk-elements-sass": "3.1.2",
 		"govuk_frontend_toolkit": "7.2.0",
+		"govuk-elements-sass": "3.1.2",
 		"helmet": "3.12.0",
 		"i18n": "0.8.3",
 		"jsonwebtoken": "8.5.1",
@@ -103,7 +105,6 @@
 		"moment": "^2.24.0",
 		"node-exiftool": "2.3.0",
 		"node-fetch": "1.7.3",
-		"node-sass": "6.0.0",
 		"notifications-node-client": "4.1.0",
 		"passport": "0.4.0",
 		"passport-oauth2": "1.4.0",
