--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -70,7 +70,7 @@ services:
       - SPRING_PROFILES_ACTIVE=default
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/identity-service:idt-release-4.0-1-20210329-090558
+    image: lpgregistry.azurecr.io/identity-service:idt-release-7.0-1-20210722-145741
     ports:
       - 8080:8080
       - 8081:8081
@@ -85,7 +85,7 @@ services:
       - XAPI_URL=http://learning-locker-xapi:8083/data/xAPI
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/lpg-learner-record:idt-release-4.0-1-20210329-114134
+    image: lpgregistry.azurecr.io/lpg-learner-record:idt-release-7.0-1-20210722-145741
     depends_on:
       - civil-servant-registry
       - identity
@@ -113,7 +113,7 @@ services:
       - REGISTRY_SERVICE_URL=http://civil-servant-registry:9002
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/lpg-learning-catalogue:idt-release-6.0-1-20210614-152712
+    image: lpgregistry.azurecr.io/lpg-learning-catalogue:idt-release-7.0-2-20210722-150339
     depends_on:
       - identity
     ports:
@@ -126,7 +126,7 @@ services:
       - OAUTH_SERVICE_URL=http://identity:8080
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/civil-servant-registry-service:idt-release-4.0-1-20210329-091016
+    image: lpgregistry.azurecr.io/civil-servant-registry-service:idt-release-7.0-1-20210722-145923
     depends_on:
       - identity
     ports:
@@ -141,7 +141,7 @@ services:
       - LEARNING_CATALOGUE_SERVICE_URL=http://learning-catalogue:9001
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/lpg-report-service:idt-release-5.0-2-20210514-083933
+    image: lpgregistry.azurecr.io/lpg-report-service:idt-release-7.0-1-20210722-150049
     depends_on:
       - identity
       - learner-record
@@ -154,7 +154,7 @@ services:
       - OAUTH_SERVICE_URL=http://identity:8080
       - APPINSIGHTS_INSTRUMENTATIONKEY=key
       - JWT_KEY=key
-    image: lpgregistry.azurecr.io/notification-service:master-7
+    image: lpgregistry.azurecr.io/notification-service:idt-release-7.0-1-20210722-145922
     depends_on:
       - identity
     ports:
